Better front end using google's graphs, new jumbotron image, js that is almost ready to get Eric's data

--- a/web/train.html
+++ b/web/train.html
@@ -92,22 +92,12 @@
 				<form class="col-md-12 search-box" action="train.html">
 					<div class="col-md-5 form-group alpha">
 						<label for="origin">Origin</label>
-						<select multiple class="select2 col-md-12 alpha omega" id="origin">
-							<option>Cornwall</option>
-							<option>Ottawa</option>
-							<option>Montreal</option>
-							<option>Kitchener</option>
-							<option>Toronto</option>
+						<select class="select2 col-md-12 alpha omega" id="origin">
 						</select>
 					</div>
 					<div class="col-md-5 form-group alpha">
 						<label for="destination">Destination</label>
-						<select multiple class="select2 col-md-12 alpha omega" id="destination">
-							<option>Cornwall</option>
-							<option>Ottawa</option>
-							<option>Montreal</option>
-							<option>Kitchener</option>
-							<option>Toronto</option>
+						<select class="select2 col-md-12 alpha omega" id="destination">
 						</select>
 					</div>
 					<button type="submit" class="col-md-2 btn btn-default button-push">Search Stats &raquo;</button>
