added the stat boxes and changed the homepage

--- a/web/index.html
+++ b/web/index.html
@@ -55,8 +55,10 @@
 	<div class="jumbotron">
 		<div class="container">
 			<div class="jumbo-cta">
-				<h2>Word1</h2>
-				<h2>Word2</h2>
+				<span class="background-copy">Largely due to freight traffic,</span>
+				<h1>
+				XX% of VIA Rail's trains are delayed 10+ minutes.</h1>
+				<h2>How late is your train?</h2>
 			</div>
 			<form class="col-md-12 search-box" action="index.html" method="GET">
 				<div class="col-md-5 form-group alpha">
@@ -93,19 +95,19 @@
 		<div id="statsTrainRoute" class="row" style="display:none">
 			<div class="col-md-4">
 				<div class="stat-box">
-					<span class="callout-stat">6 trains</span>
-					<p class="callout-desc">run between Montreal and Toronto daily</p>
+					<span class="callout-stat num-trains-run-cta">6 trains</span>
+					<p class="callout-desc num-trains-run-desc"></p>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="stat-box">
-					<span class="callout-stat">60%</span>
+					<span class="callout-stat num-ten-or-more-late-cta">60%</span>
 					<p class="callout-desc">are over 10 minutes late</p>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="stat-box">
-				<span class="callout-stat">35%</span>
+				<span class="callout-stat num-thirty-or-more-late-cta"></span>
 				<p class="callout-desc">are over 30 minutes late</p>
 				</div>
 			</div>
